# pdfmod

./: .gitignore  AUTHORS  HACKING  MAINTAINERS  Makefile.am  Makefile.include  NEWS  PdfMod.mdp  PdfMod.mds  README  README.releasing  autogen.sh  configure.ac  pdfmod.doap
data/: Makefile.am  pdfmod.desktop.in  pdfmod.desktop.in.in
data/icons/: Makefile.am
docs/: Makefile.am  README  pdfmod-C.omf
docs/C/: Makefile.am  pdfmod.xml
docs/ca/: ca.po
docs/cs/: cs.po
docs/da/: da.po
docs/de/: de.po
docs/es/: es.po
docs/fr/: fr.po
docs/hr/: hr.po
docs/pl/: pl.po
docs/ru/: ru.po
docs/sl/: sl.po
docs/sv/: sv.po
docs/uk/: uk.po
docs/zh_CN/: zh_CN.po
docs/zh_HK/: zh_HK.po
docs/zh_TW/: zh_TW.po
lib/: Hyena.Gui.dll.mdb  Hyena.dll.mdb  Mono.Data.Sqlite.dll.mdb
lib/PdfSharp/: Makefile.am  PdfSharp.csproj
lib/PdfSharp/PdfSharp/: PSSR.cs
lib/PdfSharp/PdfSharp.Pdf/: PdfDictionary.cs  PdfOutline.cs  PdfPage.cs
lib/PdfSharp/PdfSharp.Pdf.Advanced/: PdfCatalog.cs
lib/PdfSharp/PdfSharp.Pdf.IO/: Lexer.cs
lib/PdfSharp/Resources/: Messages.de.resources
lib/poppler-sharp/: Makefile.am  poppler-sharp.csproj
lib/poppler-sharp/poppler-sharp/: poppler-sharp.dll.config
po/: LINGUAS  POTFILES.in  POTFILES.skip  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  fr.po  gl.po  hr.po  hu.po  it.po  ja.po  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  ta.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
src/: Makefile.am  PdfMod.exe.config  PdfMod.mdp
src/Libraries/PdfSharp/: Makefile.am  PdfSharp.csproj  PdfSharp.pidb  README
src/Libraries/PdfSharp/PdfSharp.Pdf/: PdfPages.cs
src/Libraries/PdfSharp/Resources/: Messages.resources
src/PdfMod/: Main.cs  Makefile.am  PdfMod.mdp  pdfmod.desktop  pdfmod.desktop.in  pdfmod.in
src/PdfMod/Core/: AssemblyInfo.cs  Client.cs  Configuration.cs  Defines.cs.in
src/PdfMod/Gui/: Actions.cs  BookmarkView.cs  CairoCell.cs  Client.cs  DocumentIconView.cs  DocumentView.cs  ListStore.cs  MetadataEditorBox.cs  PageCell.cs  PageListStore.cs  SelectMatchingBox.cs  ZoomSlider.cs
src/PdfMod/Pdf/: Document.cs  Page.cs  PageLabels.cs  PageThumbnail.cs
src/PdfMod/Pdf/Actions/: BaseAction.cs  BasePageAction.cs  ExportImagesAction.cs  MoveAction.cs  RemoveAction.cs  RotateAction.cs
src/PdfMod/PdfMod/: CellRendererCairo.cs  CellRendererPage.cs  Configuration.cs  Defines.cs.in  Document.cs  GlobalActions.cs  Main.cs  MetadataEditorBox.cs  Page.cs  PageLabels.cs  PageThumbnail.cs  PdfIconView.cs  PdfListStore.cs  PdfMod.cs  QueryBox.cs
src/PdfMod/PdfMod.Actions/: BasePageAction.cs  ExportImagesAction.cs  MoveAction.cs  RemoveAction.cs  RotateAction.cs
src/PdfMod/Resources/: UIManager.xml
src/Resources/: UIManager.xml
